--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>All of these projects were created by me, using free datasets and/or resources. I'm planning to add more of them in the future.</p>
+							<p>All of these projects were created by me, using free datasets and/or resources. I'm planning to add more of them in the future.
+							<br />Click on the images to see more!</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="pages/random.html" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
 											<h3>R - Generation of Random Values </h3>
 										</header>
@@ -83,7 +84,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="pages/happiness.html" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
 											<h3>R - Analysis of the World Happiness Report</h3>
 										</header>
@@ -91,9 +92,9 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="pages/reservations.html" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
-											<h3>Python - Table Reservations</h3>
+											<h3>Python & SQL - Table Reservations</h3>
 										</header>
 									</article>
 								</div>
