--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
-
-							<p>Hello everyone! My name is Claudio and I am a mathematical engineer. <br />
+							<p align="center">Hello everyone! My name is Claudio and I am a mathematical engineer.
 								I was working as a consultant for a tech company, when I decided to leave my job and pursue a master's degree in Data Science: numbers
-									and data have always been my passion and I simply find fascinating how we can now model and predict future using technology and mathematics. <br />
-									My dream job would definitely be in the pharmaceutical/bio-tech field.
+								and data have always been my passion and I simply find fascinating how we can now model and predict future using technology and mathematics.
+								My dream job would definitely be in the pharmaceutical/bio-tech field.
 							</p>
+
+							<img src="images/foto.jpg" alt="Claudio" align="center" />
 						</div>
 					</section>
 
