--- a/pages/reservations.html
+++ b/pages/reservations.html
@@ -55,12 +55,11 @@
 								<h2>Table Manager</h2>
 							</header>
 
-							<p>The restaurant manager can receive table reservation requests and operate on the database to update the booking records in the system. 
+							<p align='left'>The restaurant manager can receive table reservation requests and operate on the database to update the booking records in the system. 
 								A reservation is requested by a guest that tells the manager: their name and personal phone number, number of guests for the table.
-								For sake of simplicity, we assume the software manages only one evening.
-								Here's a list of commands: <br />
-								<dl>
-									<dt><strong>R guests number name </strong>- Reserve a table for g guest(s) under the name with specified (phone) number.</dt>
+								For sake of simplicity, we assume the software manages only one evening. Here's a list of commands:
+								<dl align='left'>
+									<dt>R guests number name - Reserve a table for g guest(s) under the name with specified (phone) number.</dt>
 									<dt>S t- Show the information of a certain reservation identified by t.</dt>
 									<dt>L - List all the reservations.</dt>
 									<dt>U - List all the unreserved tables, one per line.</dt>
