--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
+								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Projects</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
 							</ul>
 						</nav>
@@ -54,9 +54,9 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Welcome to my Data Science <strong> Portfolio </strong> </h2>
-								<p>This is just a small site I created to showcase a few of my skills with programming languages: <br />
-									mostly <strong>R, Python</strong> and <strong>Power BI</strong></p>
+								<h2 class="alt"> <strong> Data Science projects </strong> by Claudio Pella </h2>
+								<p>This is my personal site where I list projects created using: <br />
+									<strong>R</strong>, <strong>SQL</strong> and <strong>Python</strong>
 							</header>
 
 						</div>
@@ -67,11 +67,11 @@
 						<div class="container">
 
 							<header>
-								<h2>Portfolio</h2>
+								<h2>Projects</h2>
 							</header>
 
-							<p>All of these projects were created by me, using free datasets and/or resources. I'm planning to add more of them in the future.
-							<br />Click on the images to see more!</p>
+							<p>These projects were created using free datasets and resources.
+							<br />Click on the images to see more</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
@@ -81,6 +81,12 @@
 											<h3>R - Generation of Random Values </h3>
 										</header>
 									</article>
+									<article class="item">
+										<a href="pages/bayesian.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+											<header>
+												<h3>R - House Prices</h3>
+											</header>
+									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
@@ -89,12 +95,24 @@
 											<h3>R - Analysis of the World Happiness Report</h3>
 										</header>
 									</article>
+									<article class="item">
+										<a href="pages/text.html" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<header>
+											<h3>Python - Text Mining</h3>
+										</header>
+									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
 										<a href="pages/reservations.html" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
 											<h3>Python & SQL - Table Reservations</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="pages/ocular.html" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<header>
+											<h3>Python - Ocular Disease Prediction</h3>
 										</header>
 									</article>
 								</div>
@@ -111,7 +129,7 @@
 								<h2>About Me</h2>
 							</header>
 
-							<p align="center">Hello everyone! My name is Claudio and I am a mathematical engineer.
+							<p align="center">My name is Claudio and I am a Mathematical Engineer.
 								I was working as a consultant for a tech company, when I decided to leave my job and pursue a master's degree in Data Science: numbers
 								and data have always been my passion and I simply find fascinating how we can now model and predict future using technology and mathematics.
 								My dream job would definitely be in the pharmaceutical/bio-tech field.
