--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Claudio's Portfolio</title>
+		<title>Claudio's Projects</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +21,7 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Claudio P</h1>
+							<h1 id="title">Claudio Pella</h1>
 							<p>Mathematical Engineer</p>
 						</div>
 
@@ -54,7 +54,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt"> <strong> Data Science projects </strong> by Claudio Pella </h2>
+								<h2 class="alt"> <strong>My Data Science Projects </strong></h2>
 								<p>This is my personal site where I list projects created using: <br />
 									<strong>R</strong>, <strong>SQL</strong> and <strong>Python</strong>
 							</header>
@@ -70,8 +70,8 @@
 								<h2>Projects</h2>
 							</header>
 
-							<p>These projects were created using free datasets and resources.
-							<br />Click on the images to see more</p>
+							<p>Created using free datasets and resources.
+							<br /><i><font size="3">(Click on the images to see more)</font></i></p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
@@ -129,10 +129,12 @@
 								<h2>About Me</h2>
 							</header>
 
-							<p align="center">My name is Claudio and I am a Mathematical Engineer.
-								I was working as a consultant for a tech company, when I decided to leave my job and pursue a master's degree in Data Science: numbers
-								and data have always been my passion and I simply find fascinating how we can now model and predict future using technology and mathematics.
-								My dream job would definitely be in the pharmaceutical/bio-tech field.
+							
+
+							<p align="center">Hi, I'm Claudio and I'm a Mathematical Engineer: numbers have always been my passion and I find fascinating how we can predict paths using
+							AI models.
+								After working as a consultant for a tech company, I decided to pursue a <strong>M.Sc in Data Analytics</strong>.<br> 
+								My dream job is in the pharmaceutical/bio-tech field.
 							</p>
 						</div>
 					</section>
@@ -144,7 +146,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</div>
